--- a/.env sample
+++ b/.env sample
@@ -1,5 +1,4 @@
-CONFLUENT_URL=aaa
-CONFLUENT_USERNAME=aaa
-CONFLUENT_PASSWORD=aaa
-
-
+# CONFLUENT_URL=aaa
+# CONFLUENT_USERNAME=aaa
+# CONFLUENT_PASSWORD=aaa
+# KAFKA_PROVIDER=confluent || local
